--- a/pattysMod/Project/Life System/appraisals/0.3-timelist.md
+++ b/pattysMod/Project/Life System/appraisals/0.3-timelist.md
@@ -3,3 +3,12 @@
 
 [111m] Configuring and tweaking notification system.
 [10m]  packing & uploading.
+
+Total:
+Minutes: 252
+Hours:   4.2
+
+USD pr hour: 10
+
+Final price:
+42 USD
