--- a/pattysMod/Project/Life System/appraisals/0.36 timeList.md
+++ b/pattysMod/Project/Life System/appraisals/0.36 timeList.md
@@ -1,2 +1,3 @@
 [28m] Adding new notifications.
 [35m] Changing notification function to allow for custom colors, testing.
+[22m] Rewriting Notification function to allow for custom icons on Life-count.
