PPattys images and FNC changes

--- a/pattysMod/Project/Life System/appraisals/0.36 timeList.md
+++ b/pattysMod/Project/Life System/appraisals/0.36 timeList.md
@@ -1,3 +1,14 @@
 [28m] Adding new notifications.
 [35m] Changing notification function to allow for custom colors, testing.
 [22m] Rewriting Notification function to allow for custom icons on Life-count.
+~1.42 hrs
+
+Total
+
+Previous unpaid work (Version 3.1):       42.00 USD
+Previous unpaid work (Version 3.2 - 3.6): 15.00 USD
+Changes (Version 3.6 - 3.8):              14.20 USD
+---------------------------------------------------
+
+Total:                               71.20 USD
+_______________________________________________
