--- a/pattysMod/Project/Life System/appraisals/0.40 timeList.md
+++ b/pattysMod/Project/Life System/appraisals/0.40 timeList.md
@@ -1,3 +1,4 @@
 [30m] Fixing ace scroll bar bug.
 [26m] Fixing Reset all lives function.
 [22m] CBA name colors, init scene error message fix
+~1.3 hours
