Pattys Life system 0.41

--- a/pattysMod/Project/Life System/appraisals/0.41 timelist.md
+++ b/pattysMod/Project/Life System/appraisals/0.41 timelist.md
@@ -1,1 +1,5 @@
 [53m] Changing CBA options, unpacking images, renaming images. Implementing global variables.
+[23m] Packing mod, initial test.
+~75 Min
+(1.25 hrs)
+12.50 USD
