--- a/pattysMod/Project/Life System/appraisals/0.1-0.2 Appraisal.md
+++ b/pattysMod/Project/Life System/appraisals/0.1-0.2 Appraisal.md
@@ -11,3 +11,5 @@ Comment:
 I am not familiar with the ingame ticket system, however it seems like a practical way of going about it.
 Alternatively I'd build a similar system from scratch.
 Keeping the old menu style should not be an issue.
+
+**The work sessions listed above has been paid in full**
