--- a/pattysMod/Project/Life System/appraisals/0.3 Appraisal reply.md
+++ b/pattysMod/Project/Life System/appraisals/0.3 Appraisal reply.md
@@ -31,3 +31,5 @@ Hourly rate:    10 USD pr hour.
 Estimated time: 270 minutes (4.5 hours)
 Minimum price:  30 USD
 Maximum price:  60 USD
+
+**The work sessions listed above has been paid in full**
