--- a/pattysMod/Project/Life System/appraisals/0.3 Appraisal.md
+++ b/pattysMod/Project/Life System/appraisals/0.3 Appraisal.md
@@ -46,3 +46,5 @@ If the player presses the Show Lifes button instead of a hint use the same Life 
 - When the player has no lives left they will get a notification on respawn with a skull icon saying no lives remaining.
 
 Example: https://gyazo.com/4d69eaf3b065529ecc7a6f5843535470
+
+**The work sessions listed above has been paid in full**
