--- a/pattysMod/Project/Life System/appraisals/0.32 timelist.md
+++ b/pattysMod/Project/Life System/appraisals/0.32 timelist.md
@@ -9,3 +9,5 @@ Total:                               57 USD
 
 
 Note: "I did spend 17 minutes looking for the reported lives bug, but it did not occur on my server, hence I suspect a previous version was loaded onto the server used when the bug was found."
+
+**The work sessions listed above has been paid in full**
