--- a/pattysMod/Project/Life System/appraisals/0.36 timeList.md
+++ b/pattysMod/Project/Life System/appraisals/0.36 timeList.md
@@ -12,3 +12,5 @@ Changes (Version 3.6 - 3.8):              14.20 USD
 
 Total:                               71.20 USD
 _______________________________________________
+
+**The work sessions listed above has been paid in full**
