--- a/pattysMod/Project/Life System/appraisals/0.39 timeList.md
+++ b/pattysMod/Project/Life System/appraisals/0.39 timeList.md
@@ -1,2 +1,3 @@
 [92m] Rebuilding the alterLives function, adding AI give lives and remove lives.
 [36m] Player/Bot search function.
+**The work sessions listed above has been paid in full**
