--- a/pattysMod/Project/Life System/appraisals/0.40 timeList.md
+++ b/pattysMod/Project/Life System/appraisals/0.40 timeList.md
@@ -2,3 +2,4 @@
 [26m] Fixing Reset all lives function.
 [22m] CBA name colors, init scene error message fix
 ~1.3 hours
+**The work sessions listed above has been paid in full**
